# geoguessr-scripts

./: .gitignore  README.md  learnablemetas.py  lint.sh  plonkit.py  pyproject.toml  requirements.txt
learnable_meta_anki/: README.md  anki.py  config.json  learnablemetas.py  scrape.py  shared.py  sort_config_file.py
learnablemeta_images/: overrides.json
plonkit_llm/: plonkit.py
source_loader/: plonkit.py
